Dispose for DisplayItem implemented. Also GarbageCollect in preview creation thread commented. Also MemoryLeaking format special handling through external program commented.

--- a/Src/FlyPhotos/Views/Settings.xaml
+++ b/Src/FlyPhotos/Views/Settings.xaml
@@ -144,7 +144,7 @@
                                     x:Name="CheckBoxEnableAutoFade"
                                     HorizontalAlignment="Left"
                                     Content="Enable Auto Fade" />
-                                <TextBlock Style="{StaticResource CaptionTextBlockStyle}" Text="Fade Intesity" />
+                                <TextBlock Style="{StaticResource CaptionTextBlockStyle}" Text="Fade Intensity" />
                                 <Slider
                                     x:Name="SliderFadeIntensity"
                                     Width="200"
