--- a/Src/FlyPhotos/Views/PhotoDisplayWindow.xaml
+++ b/Src/FlyPhotos/Views/PhotoDisplayWindow.xaml
@@ -31,6 +31,15 @@
             HorizontalAlignment="Stretch"
             VerticalAlignment="Bottom" />
         <TextBlock
+            x:Name="TxtZoom"
+            Width="Auto"
+            Height="Auto"
+            Margin="0,0,0,0"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            FontSize="12"
+            Foreground="White" />
+        <TextBlock
             x:Name="TxtFileName"
             Width="Auto"
             Height="Auto"
