--- a/Src/FlyPhotos/Views/PhotoDisplayWindow.xaml
+++ b/Src/FlyPhotos/Views/PhotoDisplayWindow.xaml
@@ -138,7 +138,7 @@
                 <ToolTipService.ToolTip>
                     <ToolTip
                         AutomationProperties.FullDescription="Non-occluding tooltip"
-                        Content="Fit"
+                        Content="Fit to display area"
                         Placement="Right" />
                 </ToolTipService.ToolTip>
             </Button>
@@ -152,7 +152,7 @@
                 <ToolTipService.ToolTip>
                     <ToolTip
                         AutomationProperties.FullDescription="Non-occluding tooltip"
-                        Content="Fit"
+                        Content="Zoom to 1:1"
                         Placement="Right" />
                 </ToolTipService.ToolTip>
             </Button>
