Added Mica theming to settings window and initwindow, other subtle changes.

--- a/Src/FlyPhotos/Views/InitWindow.xaml
+++ b/Src/FlyPhotos/Views/InitWindow.xaml
@@ -2,12 +2,13 @@
     x:Class="FlyPhotos.Views.InitWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:controls="using:CommunityToolkit.WinUI.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:ui="using:CommunityToolkit.WinUI"
     mc:Ignorable="d">
-    <Grid x:Name="MainLayout" Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <Window.SystemBackdrop>
+        <MicaBackdrop />
+    </Window.SystemBackdrop>
+    <Grid x:Name="MainLayout">
 
         <StackPanel Margin="20,10,20,20" Spacing="15">
 
@@ -19,7 +20,6 @@
                 Height="150"
                 Margin="0,30,0,0"
                 AllowDrop="True"
-                Background="{ThemeResource SystemControlPageBackgroundChromeLowBrush}"
                 DragOver="DropArea_DragOver"
                 Drop="DropArea_Drop">
                 <Grid>
